第11次提交：在用和维修可以同时存在标签，备用改为停用，增加下架。